Fix: awkward card cutoff due to overlay scrollbar

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,7 +13,7 @@ body {
   font-family: Roboto, 'Helvetica Neue', Arial, sans-serif;
   color: $GREENS_GREEN_DARK;
   background-color: rgb(180, 225, 96);
-  overflow-y: overlay;
+  overflow-y: auto;
   overflow-x: hidden;
   font-weight: 500;
   font-size: 14px;
